Notas al pie, fauna y comunidades nativas

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/Comunidades nativas/_footnotes.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/Comunidades nativas/_footnotes.cshtml
@@ -1,1 +1,96 @@
-﻿
+﻿<div style="mso-element: footnote;" id="foot_ccnn_1">
+    <div class="MsoFootnoteText">
+        <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+            <a style="mso-footnote-id: foot_ccnn_1;" href="#_foot_ccnn_1" name="_foot_ccnn_1">
+                <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+            </a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            Mediante la <strong>Resolución de Sede Operativa N° XX, de fecha XX</strong>, la ARFFS, resolvió entre otros, lo siguiente:
+        </p>
+    </div>
+</div>
+
+<div style="mso-element: footnote;" id="foot_ccnn_2">
+    <div class="MsoFootnoteText">
+        <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+            <a style="mso-footnote-id: foot_ccnn_2;" href="#_foot_ccnn_2" name="_foot_ccnn_2">
+                <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+            </a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            Los Lineamiento fueron aprobados por SEFOR mediante Resolución de Dirección Ejecutiva N° 264-2019-MINAGRI-SERFOR-DE, del 30 de diciembre de 2019.
+            Cabe indicar que,  referencialmente se puede aplicar la Guía Práctica para el Registro de Información en el Libre de Operaciones de los Títulos Habilitantes: https://cdn.www.gob.pe/uploads/document/file/2437872/Gu%C3%ADa%20pr%C3%A1ctica%20para%20el%20registro%20de%20informaci%C3%B3n%20en%20el%20Libro%20de%20Operaciones%20de%20los%20T%C3%ADtulos%20Habilitantes.pdf.pdf?v=1637081099
+        </p>
+    </div>
+</div>
+
+<div style="mso-element: footnote;" id="foot_ccnn_3">
+    <div class="MsoFootnoteText">
+        <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+            <a style="mso-footnote-id: foot_ccnn_3;" href="#_foot_ccnn_3" name="_foot_ccnn_3">
+                <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+            </a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <strong>Anexo 1 del Reglamento de Infracciones y Sanciones en Materia Forestal y de Fauna Silvestre, aprobado mediante Decreto Supremo N° 007-2021-MIDAGRI</strong>
+            <br />
+            (…)
+            <br />
+            11. “No tener libro de operaciones o no registrar la información en dicho libro, de acuerdo a las disposiciones establecidas.”
+        </p>
+    </div>
+</div>
+
+<div style="mso-element: footnote;" id="foot_ccnn_4">
+    <div class="MsoFootnoteText">
+        <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+            <a style="mso-footnote-id: foot_ccnn_4;" href="#_foot_ccnn_4" name="_foot_ccnn_4">
+                <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+            </a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            Cabe indicar que, de la revisión de la Forma 20, la última movilización para la especie Dipteryx micrantha “shihuahuaco” y  para la especie Dipteryx micrantha “shihuahuaco”, se realizó el 17 de agosto de 2022.
+        </p>
+    </div>
+</div>
+
+<div style="mso-element: footnote;" id="foot_ccnn_5">
+    <div class="MsoFootnoteText">
+        <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+            <a style="mso-footnote-id: foot_ccnn_5;" href="#_foot_ccnn_5" name="_foot_ccnn_5">
+                <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+            </a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <strong>Anexo 1 del Reglamento de Infracciones y Sanciones en Materia Forestal y de Fauna Silvestre, aprobado mediante Decreto Supremo N° 007-2021-MIDAGRI</strong>
+            <br />
+            (…)
+            <br />
+            21. “Talar, extraer y/o aprovechar recursos forestales, sin autorización, en su condición o no de titular del título habilitante, a excepción de los aprovechados por subsistencia.”
+        </p>
+    </div>
+</div>
+
+<div style="mso-element: footnote;" id="foot_ccnn_6">
+    <div class="MsoFootnoteText">
+        <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+            <a style="mso-footnote-id: foot_ccnn_6;" href="#_foot_ccnn_6" name="_foot_ccnn_6">
+                <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+            </a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <strong>Anexo 1 del Reglamento de Infracciones y Sanciones en Materia Forestal y de Fauna Silvestre, aprobado mediante Decreto Supremo N° 007-2021-MIDAGRI</strong>
+            <br />
+            (…)
+            <br />
+            26. “Utilizar indebidamente o facilitar la guía de transporte forestal, así como la documentación otorgada o aprobada por la autoridad competente, para amparar la extracción, transporte, transformación, almacenamiento o comercialización de los especímenes, productos o sub productos forestales obtenidos ilegalmente.”
+        </p>
+    </div>
+</div>
+
+<div style="mso-element: footnote;" id="foot_ccnn_7">
+    <div class="MsoFootnoteText">
+        <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+            <a style="mso-footnote-id: foot_ccnn_7;" href="#_foot_ccnn_7" name="_foot_ccnn_7">
+                <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+            </a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            En el expediente del Plan de Manejo N° xx se incluye el contrato de regencia, ingresado al OSINFOR con Registro N° xxx
+        </p>
+    </div>
+</div>
