--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/_tmplFootnotes.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/_tmplFootnotes.cshtml
@@ -199,7 +199,7 @@
         @Html.Partial("~/Areas/Fiscalizacion/Views/ManPAU/templates/Concesiones/_footnotes.cshtml")
 
         {{else COD_MODALIDAD == "02"}}
-        @Html.Partial("~/Areas/Fiscalizacion/Views/ManPAU/templates/Predios privados/_footnotes.cshtml")
+        @Html.Partial("~/Areas/Fiscalizacion/Views/ManPAU/templates/Concesiones/_footnotes.cshtml")
 
         {{else COD_MODALIDAD == "03"}}
         @Html.Partial("~/Areas/Fiscalizacion/Views/ManPAU/templates/Comunidades nativas/_footnotes.cshtml")
