--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/_tmplRSDObligaciones.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/_tmplRSDObligaciones.cshtml
@@ -222,7 +222,7 @@
                     </a>.
                 </td>
                 <td style="border: 1px solid #000;">
-                    Literal d) del numeral 43.1 del artículo 43 del RGF                    
+                    Literal d) del numeral 43.1 del artículo 43 del RGF
                     <a style="mso-footnote-id: foot_concesiones_8" href="#_foot_concesiones_8" title="">
                         <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
                     </a>
@@ -368,7 +368,7 @@
         Atendiendo a lo expuesto, en tanto se declaró un volumen movilizado de balance de extracción mayor al volumen movilizado advertido en campo, se verifica que se ha declarado un excedente respecto al recurso forestal válidamente aprovechado.
     </p>
     <p class="enumeration">
-        En ese sentido, la/el titular habría utilizado indebidamente o facilitó la guía de transporte forestal, así como la documentación otorgada o aprobada por la autoridad competente, para amparar la extracción no autorizada de un volumen de xxx m3 cuyo origen se desconoce, conforme se muestra en el cuadro anterior. 
+        En ese sentido, la/el titular habría utilizado indebidamente o facilitó la guía de transporte forestal, así como la documentación otorgada o aprobada por la autoridad competente, para amparar la extracción no autorizada de un volumen de xxx m3 cuyo origen se desconoce, conforme se muestra en el cuadro anterior.
         Por ello, corresponde imputar a la/el titular la comisión de la infracción establecida en el numeral 26
         <a style="mso-footnote-id: foot_concesiones_13" href="#_foot_concesiones_13" title="">
             <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
@@ -484,7 +484,12 @@
         </thead>
         <tbody>
             <tr>
-                <td style="border: 1px solid #000;" rowspan="2">Plan de Manejo N° XX, correspondiente al periodo XX</td>
+                <td style="border: 1px solid #000;" rowspan="2">
+                    Plan de Manejo N° XX, correspondiente al periodo XX
+                    <a style="mso-footnote-id: foot_ccnn_1" href="#_foot_ccnn_1" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                </td>
                 <td style="border: 1px solid #000;" rowspan="2">Informe de Ejecución Anual</td>
                 <td style="border: 1px solid #000;">No maderable</td>
                 <td style="border: 1px solid #000;">XX</td>
@@ -612,6 +617,9 @@
                 </td>
                 <td style="border: 1px solid #000;">
                     La/el titular no mantiene actualizado el libro de operaciones, de acuerdo a los lineamientos aprobados por el SERFOR.
+                    <a style="mso-footnote-id: foot_ccnn_2" href="#_foot_ccnn_2" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
                 </td>
                 <td style="border: 1px solid #000;">
                     Literal d) del numeral 29.1 del artículo 29 del RGFFSCNCC  y el artículo 2 de la Resolución de Dirección Ejecutiva N° 264-2019-MINAGRI-SERFOR-DE
@@ -652,7 +660,11 @@
         </tbody>
     </table>
     <p class="enumeration">
-        En ese sentido, <strong>se concluye que el Libro de operaciones no se encuentra actualizado.</strong> Por ello, corresponde imputar a la/el titular la comisión de la infracción establecida en el numeral 11 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
+        En ese sentido, <strong>se concluye que el Libro de operaciones no se encuentra actualizado.</strong> Por ello, corresponde imputar a la/el titular la comisión de la infracción establecida en el numeral 11
+        <a style="mso-footnote-id: foot_ccnn_3" href="#_foot_ccnn_3" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>
+        del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
     </p>
 </script>
 
@@ -684,7 +696,11 @@
         </tbody>
     </table>
     <p class="enumeration">
-        Del análisis de los resultados obtenidos en la supervisión, cotejada con los Balances de Extracción y Forma 20, de fecha xx de xx de 20xx (Registro N° xx), se advierte que no se justifica el volumen declarado como aprovechado, por un total de <strong>xx m<sup>3</sup></strong> de madera, conforme el siguiente detalle:
+        Del análisis de los resultados obtenidos en la supervisión, cotejada con los Balances de Extracción y Forma 20
+        <a style="mso-footnote-id: foot_ccnn_4" href="#_foot_ccnn_4" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>
+        , de fecha xx de xx de 20xx (Registro N° xx), se advierte que no se justifica el volumen declarado como aprovechado, por un total de <strong>xx m<sup>3</sup></strong> de madera, conforme el siguiente detalle:
     </p>
     <table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
         <thead>
@@ -712,7 +728,10 @@
         </tbody>
     </table>
     <p class="enumeration">
-        En ese sentido, la/el titular habría realizado el aprovechamiento de un volumen injustificado xxx m3 de madera, conforme se muestra en el cuadro anterior. Por ello, corresponde imputar a la/el titularla comisión de la infracción establecida en el numeral 21 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
+        En ese sentido, la/el titular habría realizado el aprovechamiento de un volumen injustificado xxx m3 de madera, conforme se muestra en el cuadro anterior. Por ello, corresponde imputar a la/el titularla comisión de la infracción establecida en el numeral 21
+        <a style="mso-footnote-id: foot_ccnn_5" href="#_foot_ccnn_5" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a> del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
     </p>
 </script>
 
@@ -750,7 +769,10 @@
         Atendiendo a lo expuesto, en tanto se declaró un volumen movilizado de balance de extracción mayor al volumen movilizado advertido en campo, se verifica que se ha declarado un excedente respecto al recurso forestal válidamente aprovechado.
     </p>
     <p class="enumeration">
-        En ese sentido, la/el titular habría utilizado indebidamente o facilitó la guía de transporte forestal, así como la documentación otorgada o aprobada por la autoridad competente, para amparar la extracción no autorizada de un volumen de <strong>xxx m<sup>3</sup></strong> cuyo origen se desconoce, conforme se muestra en el cuadro anterior. Por ello, corresponde imputar a la/el titular la comisión de la infracción establecida en el numeral 26 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
+        En ese sentido, la/el titular habría utilizado indebidamente o facilitó la guía de transporte forestal, así como la documentación otorgada o aprobada por la autoridad competente, para amparar la extracción no autorizada de un volumen de <strong>xxx m<sup>3</sup></strong> cuyo origen se desconoce, conforme se muestra en el cuadro anterior. Por ello, corresponde imputar a la/el titular la comisión de la infracción establecida en el numeral 26
+        <a style="mso-footnote-id: foot_ccnn_6" href="#_foot_ccnn_6" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a> del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
     </p>
 </script>
 
@@ -782,7 +804,10 @@
         </tbody>
     </table>
     <p class="enumeration">
-        El xx de xxx de 20xx, la/el titular  y el Ing. xx, suscribieron el Contrato de Regencia Forestal, el cual tiene como objeto la elaboración del expediente técnico del PO y levantamiento de observaciones formuladas por la autoridad forestal.
+        El xx de xxx de 20xx, la/el titular  y el Ing. xx, suscribieron el Contrato de Regencia Forestal
+        <a style="mso-footnote-id: foot_ccnn_7" href="#_foot_ccnn_7" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>, el cual tiene como objeto la elaboración del expediente técnico del PO y levantamiento de observaciones formuladas por la autoridad forestal.
     </p>
     <p class="enumeration">
         Ahora bien, el Plan de Manejo, aprobado mediante la Resolución Jefatural N° xx, de fecha xx de xx de 2021, <strong>se encuentra vigente desde el desde el xx de xxx de 20xx hasta el xx de xx de 20xx.</strong> Asimismo, de la revisión de la Forma 20, se advierte que la última movilización se realizó el <strong>xx de xx de 20xx.</strong>
@@ -829,6 +854,9 @@
                 </td>
                 <td style="border: 1px solid #000;">
                     Literal b) del numeral 17.1 del artículo 17 del Reglamento para la Gestión de Fauna Silvestre, aprobado por Decreto Supremo Nº 019-2015-MINAGRI (en adelante, RGFS).
+                    <a style="mso-footnote-id: foot_fauna_1" href="#_foot_fauna_1" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
                 </td>
                 <td style="border: 1px solid #000;">
                     Sí /Presentar el Informe de Ejecución Anual del Plan de manejo xx, correspondiente al periodo xx
@@ -861,7 +889,12 @@
         </thead>
         <tbody>
             <tr>
-                <td style="border: 1px solid #000;" rowspan="2">Plan de Manejo N° XX, correspondiente al periodo XX</td>
+                <td style="border: 1px solid #000;" rowspan="2">
+                    Plan de Manejo N° XX, correspondiente al periodo XX
+                    <a style="mso-footnote-id: foot_fauna_2" href="#_foot_fauna_2" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                </td>
                 <td style="border: 1px solid #000;" rowspan="2">Informe de Ejecución Anual</td>
                 <td style="border: 1px solid #000;">No maderable</td>
                 <td style="border: 1px solid #000;">XX</td>
@@ -902,6 +935,9 @@
                 </td>
                 <td style="border: 1px solid #000;">
                     Numeral 59.1 del artículo 59 del RGFS
+                    <a style="mso-footnote-id: foot_fauna_3" href="#_foot_fauna_3" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
                 </td>
                 <td style="border: 1px solid #000;">
                     La administrada no habría informado el egreso de trece (13) especímenes de fauna silvestre, de acuerdo al siguiente detalle: once (11) especímenes de las especies  Brotogeris versicolurus “perico ala amarilla”, Geranoatus polyosoma “aguilucho variable” y un (01)  espécimen de la especie Nasua nasua “coati”.
@@ -990,9 +1026,15 @@
                 </td>
                 <td style="border: 1px solid #000;">
                     La/el titular no mantiene actualizado el libro de operaciones, de acuerdo a los lineamientos aprobados por el SERFOR.
+                    <a style="mso-footnote-id: foot_fauna_4" href="#_foot_fauna_4" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
                 </td>
                 <td style="border: 1px solid #000;">
                     Literal d) del numeral 17.1 del artículo 17 del RGFS
+                    <a style="mso-footnote-id: foot_fauna_5" href="#_foot_fauna_5" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
                 </td>
                 <td style="border: 1px solid #000;">
                     Si, sólo en caso de no haber registrado la información, pero se cuente con la documentación que acredite la procedencia legal del recurso / Actualizar el libro de operaciones.
@@ -1030,7 +1072,11 @@
         </tbody>
     </table>
     <p class="enumeration">
-        En ese sentido, <strong>se concluye que el Libro de operaciones no se encuentra actualizado.</strong> Por ello, corresponde imputar a la/el titular la comisión de la infracción establecida en el numeral 11 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
+        En ese sentido, <strong>se concluye que el Libro de operaciones no se encuentra actualizado.</strong> Por ello, corresponde imputar a la/el titular la comisión de la infracción establecida en el numeral 11
+        <a style="mso-footnote-id: foot_fauna_6" href="#_foot_fauna_6" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>
+        del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
     </p>
     <p class="enumeration">
         Con relación a la implementación del plan de manejo:
@@ -1049,7 +1095,11 @@
                     Presentar el plan de manejo y cumplir con su implementación, luego de ser aprobado.
                 </td>
                 <td style="border: 1px solid #000;">
-                    Literal a) del numeral 17.1 del artículo 17 del RGFS.
+                    Literal a)
+                    <a style="mso-footnote-id: foot_fauna_7" href="#_foot_fauna_7" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    del numeral 17.1 del artículo 17 del RGFS.
                 </td>
                 <td style="border: 1px solid #000;">
                     La administrada no implementó las actividades de infraestructura, manejo de registros, sanitario, bioseguridad, planes y/o programas y alimentario, conforme al plan de manejo de fauna silvestre aprobado.
@@ -1091,7 +1141,11 @@
                     Se evidencia que no contó con la participación de regente forestal para la implementación del plan de manejo.
                 </td>
                 <td style="border: 1px solid #000;">
-                    Literal m) del numeral 17.1 del artículo 17 del RGFS
+                    Literal m)
+                    <a style="mso-footnote-id: foot_fauna_8" href="#_foot_fauna_8" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    del numeral 17.1 del artículo 17 del RGFS
                 </td>
                 <td style="border: 1px solid #000;">
                     No
@@ -1100,7 +1154,10 @@
         </tbody>
     </table>
     <p class="enumeration">
-        El xx de xxx de 20xx, la/el titular  y el Ing. xx, suscribieron el Contrato de Regencia Forestal, el cual tiene como <u>objeto la elaboración del expediente técnico del PO y levantamiento de observaciones formuladas por la autoridad forestal.</u>
+        El xx de xxx de 20xx, la/el titular  y el Ing. xx, suscribieron el Contrato de Regencia Forestal
+        <a style="mso-footnote-id: foot_fauna_9" href="#_foot_fauna_9" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>, el cual tiene como <u>objeto la elaboración del expediente técnico del PO y levantamiento de observaciones formuladas por la autoridad forestal.</u>
     </p>
     <p class="enumeration">
         Ahora bien, el Plan de Manejo, aprobado mediante la Resolución Jefatural N° xx, de fecha xx de xx de 2021, <strong>se encuentra vigente desde el desde el xx de xxx de 20xx hasta el xx de xx de 20xx.</strong> Asimismo, de la revisión de la Forma 20, se advierte que la última movilización se realizó el <strong>xx de xx de 20xx.</strong>
