--- a/SIGOFCv3/Areas/THabilitante/Views/ManTHabilitante/Index.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManTHabilitante/Index.cshtml
@@ -1047,13 +1047,22 @@
                                                         <tr>
                                                             <th width="20%">TIPO DE ÁREA</th>
                                                             <th width="60%">DESCRIPCIÓN DE ÁREA</th>
-                                                            <th width="20%">ÁREA (HA).</th>                                                            
+                                                            <th width="20%">ÁREA (HA).</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody id="tbodyDivIntPreTot">
-
                                                     </tbody>
                                                 </table>
+                                                <div class="form-row">
+                                                    <div class="form-group col-md-8"></div>
+                                                    <div class="form-group col-md-2">
+                                                        <label for="txtTotalDI" class="text-small">TOTAL</label>
+                                                        <div class="input-group input-group-sm">
+                                                            <input id="txtTotalDI" type="text" class="form-control form-control-sm" style="font-size: 24px;" placeholder="Total" value="0.00" disabled />
+                                                            <span class="input-group-text"><i class="fa fa-plus-square" style="cursor: pointer; font-size: 36px; color: green " data-toggle="tooltip" data-placement="top" title="Calcular" onclick="ManTHabilitante.fnCalcularDivisionInterna();"></i></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     }
