--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/_InformeResSubDir.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/_InformeResSubDir.cshtml
@@ -390,8 +390,8 @@
             <h5>Incumplimiento de obligaciones</h5>
             <div class="mt-3" v-for="(item, index) in Infracciones">
                 <div class="custom-control custom-checkbox custom-control-inline">
-                    <input type="checkbox" class="custom-control-input" :id="item.templateId" v-model="item.select">
-                    <label class="custom-control-label" :for="item.templateId">{{item.titulo}}</label>
+                    <input type="checkbox" class="custom-control-input" :id="'inf_' + item.codInfraccion" v-model="item.select">
+                    <label class="custom-control-label" :for="'inf_' + item.codInfraccion">{{item.titulo}}</label>
                 </div>
             </div>
         </fieldset>
